--- a/core-service/Dockerfile
+++ b/core-service/Dockerfile
@@ -1,4 +1,3 @@
-# ИСПРАВЛЕННЫЙ Dockerfile для core-service:
 FROM ubuntu:22.04
 
 RUN apt-get update && apt-get install -y \
@@ -12,12 +11,10 @@ RUN apt-get update && apt-get install -y \
 
 WORKDIR /app
 
-# Копируем зависимости отдельно для кэширования
-COPY CMakeLists.txt .
-COPY include/ ./include/
-COPY src/ ./src/
+COPY . .
 
-RUN mkdir build && cd build && \
+RUN mkdir -p build && \
+    cd build && \
     cmake .. && \
     make
 
