--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-TELEGRAM_BOT_TOKEN=8371406479:AAG0vFR975QiHfELDKAbMzntNsRRISbn48s
+TELEGRAM_BOT_TOKEN=your_bot_token_here
 JWT_SECRET=test_secret_key_123
