--- a/auth-service/Dockerfile
+++ b/auth-service/Dockerfile
@@ -1,18 +1,22 @@
 FROM golang:1.21-alpine AS builder
 
 WORKDIR /app
-COPY go.mod ./
+
+COPY go.mod go.sum ./
 RUN go mod download
+
 COPY . .
 
-RUN go build -o /auth-service
+RUN go build -o auth-service .
 
 FROM alpine:latest
-RUN apk --no-cache add ca-certificates
-WORKDIR /root/
-COPY --from=builder /auth-service .
-EXPOSE 8081
 
-ENV JWT_SECRET=your_super_secret_key_change_in_production
+RUN apk --no-cache add ca-certificates
+
+WORKDIR /root/
+
+COPY --from=builder /app/auth-service .
+
+EXPOSE 8081
 
 CMD ["./auth-service"]
